@@ -1,5 +1,9 @@
 * enhancements
-  * Rememberable module allows user to be remembered across browsers; enabled by default (by github.com/trevorturk)
+  * Rememberable module allows user to be remembered across browsers and is enabled by default (by github.com/trevorturk)
+  * devise_for can now be used together with scope method in routes but with a few limitations (check the documentation)
+
+* deprecation
+  * :path_prefix option in devise_for is no longer supported
 
 * bug fix
   * Fix a bug in Devise::TestHelpers where current_user was returning a Response object for non active accounts;
